--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -173,10 +173,10 @@ cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
 chmod 600 ~/.ssh/authorized_keys
 ```
 
-9. Connect to USyd's Artemis/RDS system using sftp and your unikey:
+9. Connect to USyd's Artemis/RDS system using `lftp` and your unikey:
 
 ```bash
-sftp <your-unikey>@research-data-ext.sydney.edu.au
+lftp sftp://<your-unikey>@research-data-ext.sydney.edu.au
 ```
 
 Provide your password when prompted. Then make and move into a `.ssh` directory if you don't already have one: 
@@ -192,13 +192,13 @@ cd ~/.ssh
 put authorized_keys
 ```
 
-Doing this will transfer authorized_keys on Gadi to your current directory. With sftp, it will look for the file relative to where you launched sftp. You can check where you are on Gadi using:
+Doing this will transfer authorized_keys on Gadi to your current directory. With lftp, it will look for the file relative to where you launched lftp. You can check where you are on Gadi using:
 
 ```bash
-lls
+local pwd
 ```
 
-11. Exit your sftp connection to USyd's Artemis/RDS system `ctrl + z` and test the passwordless connection: 
+11. Exit your lftp connection to USyd's Artemis/RDS system `ctrl + d` and test the passwordless connection: 
 
 ```bash
 sftp <your-unikey>@research-data-ext.sydney.edu.au
